# AidJobs

./: .env.sample  .gitattributes  .gitignore  .replit  ADMIN_AUTH_FIX_SUMMARY.md  ADMIN_DASHBOARD_STATUS.md  ADMIN_FIX_SUMMARY.md  ADMIN_PASSWORD_FIX.md  ADMIN_PASSWORD_QUICK_FIX.md  AIDJOBS_CONSOLIDATED_MASTER_PLAN.md  AI_EXTRACTION_IMPROVEMENTS.md  API_ENDPOINTS_REFERENCE.md  API_SOURCE_TESTING_GUIDE.md  APPLE_DESIGN_SYSTEM.md  BUGS_FOUND.md  COLOR_SYSTEM_REFERENCE.md  CRAWLER_ENDPOINTS_VERIFICATION.md  DASHBOARD_FUNCTIONALITY_CHECK.md  DASHBOARD_INCOMPLETE_FEATURES.md  DATABASE_CONNECTION_FIX.md  DEBUG_DASHBOARD_FUNCTIONALITY.md  DEPLOYMENT_INSTRUCTIONS.md  DIAGNOSE_FROM_BACKEND.md  Dockerfile.meilisearch  END_TO_END_VERIFICATION.md  ENRICHMENT_GUIDE.md  ENRICHMENT_PIPELINE_FIXES.md  ENTERPRISE_CATEGORIZATION_IMPLEMENTATION.md  ENTERPRISE_SCALABILITY_PLAN.md  ENVIRONMENT_VARIABLES_CHECKLIST.md  ENV_VARS_QUICK_REFERENCE.md  FEATURE_DOCUMENTATION.md  FIXES_SUMMARY.md  FIX_ADMIN_PASSWORD_NOW.md  FIX_ADMIN_PASSWORD_STEP_BY_STEP.md  FIX_SOURCES_PAGE_CACHE.md  FUNCTIONALITY_PRIORITY.md  HOW_TO_CHECK_QUALITY_DASHBOARD.md  HOW_TO_CHECK_UNDP_CRAWL.md  MEILISEARCH_OPENROUTER_SETUP.md  (+49 more)
apps/backend/: AI_EXTRACTION_SETUP.md  AI_EXTRACTION_SOURCE_TYPES.md  AI_MODEL_CHANGE_PLAN.md  AI_MODEL_RECOMMENDATIONS.md  ANSWERS_TO_QUESTIONS.md  CLARIFICATION_NEEDED.md  COMPREHENSIVE_CRAWLER_DIAGNOSIS.md  CRAWLER_ARCHITECTURE_ISSUE.md  CRAWLER_CONSOLIDATION_COMPLETE.md  DEPLOYMENT_API_KEY.md  ENTERPRISE_ROADMAP.md  HOW_TO_USE_VALIDATION_ERRORS_API.md  IMPLEMENTATION_COMPLETE.md  NEXT_STEPS.md  (+51 more)
(+365 files in other folders)
